--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,4 +11,6 @@ dependencies = [
     "uvicorn>=0.38.0",
     "typer>=0.12.3",
     "ruff>=0.14.10",
+    "python-dotenv>=1.2.1",
+    "python-jose>=3.5.0",
 ]
